Fix scroll amount on mobile

--- a/src/components/Handheld/Panels/Panels.scss
+++ b/src/components/Handheld/Panels/Panels.scss
@@ -7,4 +7,8 @@
     a.selected {
         color: $color-device-secondary;
     }
+    #cheeky-email {
+        font-size: 16px;
+        line-height: unset;
+    }
 }
